--- a/im2350/a2/e2/index.html
+++ b/im2350/a2/e2/index.html
@@ -10,13 +10,25 @@
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
 
-        <title>boilerplate</title>
+        <title>Annie's A1</title>
 
     </head>
 
     <body>
 
-        <h1>This is Annie's boilerplate</h1>
+        <h1>IM Assignment 1</h1>
+
+        <h3>What was the first thing you paid attention to when interacting with the experience?</h3>
+
+        <p>the <em>color</em> of the web</p>
+
+        <h3>What part of the experience did you spend the most time engaging with?</h3>
+
+        <ul>
+            <li>point one</li>
+            <li>point two</li>
+            <li>point three</li>
+        </ul>
 
     </body>
 
